kube-cluster/ingress/nginx-controller-simple.yaml

apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: nginx-ingress-controller
spec:
  replicas: 1
  revisionHistoryLimit: 3
  template:
    metadata:
      labels:
        k8s-app: ingress-nginx
    spec:
      containers:
      - args:
        - /nginx-ingress-controller
        - "--default-backend-service=$(POD_NAMESPACE)/default-http-backend"
        image: "quay.io/kubernetes-ingress-controller/nginx-ingress-controller:0.15.0"
        imagePullPolicy: Always
        livenessProbe:
          httpGet:
            path: /healthz
            port: 30254
            scheme: HTTP
          initialDelaySeconds: 10
          timeoutSeconds: 5
        name: nginx-ingress-controller
        ports:
        - containerPort: 80
#          hostPort: 9090
          name: http
          protocol: TCP
      terminationGracePeriodSeconds: 60
      nodeSelector:
        kubernetes.dcos.io/node-type: public
      tolerations:
      - key: "node-type.kubernetes.dcos.io/public"
        operator: "Exists"
        effect: "NoSchedule"
