kube-cluster/ingress/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: smarttest-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
#  backend:
#    serviceName: default-http-backend
#    servicePort: 8080
  rules:
#  - host: microservices.info
    http:
      paths:
      - path: /agere-lystan
        backend:
          serviceName: agere-lystan
          servicePort: 8080
#      - path: /creare-project
#        backend:
#          serviceName: creare-project
#          servicePort: 8080
#      - path: /detail-testa
#        backend:
#          serviceName: detail-testa
#          servicePort: 8080
#      - path: /identifier-reponere
#        backend:
#          serviceName: identifier-reponere
#          servicePort: 8080
#      - path: /makros-testa
#        backend:
#          serviceName: makros-testa
#          servicePort: 8080
#      - path: /mikros-testa
#        backend:
#          serviceName: mikros-testa
#          servicePort: 8080
